# project3

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
include/: AGXKit.h  Battery.h  Camera.h  Chassis.h  Display.h  Gyroscope.h  LIDAR.h  SmartCar.h  Student.h  Wheel.h
save/: car_info.txt
src/: AGXKit.cpp  Battery.cpp  Camera.cpp  Chassis.cpp  Display.cpp  Gyroscope.cpp  LIDAR.cpp  SmartCar.cpp  Student.cpp  Wheel.cpp
